--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "node server.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -23,6 +24,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "json-server": "^0.17.4",
     "vite": "^4.4.5"
   }
 }
